--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ https://twitter.com/cnoss
             <!-- ContentBlock 50% Bild 50% Text
                 ####################################################################-->
                 <figure class="m-portfolioItem2Columns">
-                  <img class="m-portfolioItem-image" src="img/Bildschirmfoto 2020-03-29 um 20.49.38.png">
+                  <img class="m-portfolioItem-image" src="/Users/Luzie/Screendesign/mi-bachelor-screendesign-doku/img/Bildschirmfoto 2020-03-29 um 20.49.38.png">
                   <figcaption>
                     <h2 class="m-portfolioItem-title">Cranach Digital Archiv</h2>
                     <h3 class="m-portfolioItem-subtitle">Die Idee hinter dem Projekt.</h3>
