--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ https://twitter.com/cnoss
             <!-- ContentBlock 50% Bild 50% Text
                 ####################################################################-->
                 <figure class="m-portfolioItem2Columns">
-                  <img class="m-portfolioItem-image" src="/Users/Luzie/Screendesign/mi-bachelor-screendesign-doku/img/Bildschirmfoto 2020-03-29 um 20.49.38.png">
+                  <img class="m-portfolioItem-image" src="img/Bildschirmfoto.png">
                   <figcaption>
                     <h2 class="m-portfolioItem-title">Cranach Digital Archiv</h2>
                     <h3 class="m-portfolioItem-subtitle">Die Idee hinter dem Projekt.</h3>
@@ -246,7 +246,7 @@ https://twitter.com/cnoss
     <!-- ContentBlock 1/3 Bild 2/3 Text
         ####################################################################-->
         <figure class="m-portfolioItem">
-          <img class="m-portfolioItem-image" src="img/Desktop - Galerie_Gemälde.png">
+          <img class="m-portfolioItem-image" src="img/Desktop - Galerie_Gemaelde.png">
           <figcaption>  <p>
               Auch im weiteren Verlauf wiederholen sich die Designs der Elemente immer soweit, dass sie als zusammengehörig erkannt werden.
               Beim zweiten Screen wird ebenfalls durch den Einsatz des Gesetzes der Nähe ein imaginäres Rechteck geschaffen, welches die Artefakte
